<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.ForgotPasswordActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:background="@color/white"
            android:hint="@string/phone"
            android:fontFamily="@font/scc"
            android:textSize="20sp"
            android:padding="10dp"
            android:inputType="numberSigned"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/codeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textAllCaps="false"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/scc"
            android:gravity="end"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:onClick="verifyNumber"/>

        <EditText
            android:id="@+id/codeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/verification_code"
            android:fontFamily="@font/scc"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:inputType="number"/>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/new_password"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/passwordConfirmEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textAllCaps="false"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/scc"
            android:gravity="end"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:onClick="changePassword"/>

    </LinearLayout>

</RelativeLayout>