<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.VerificationActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_code"
                android:fontFamily="@font/scc"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"/>

            <EditText
                android:id="@+id/codeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@color/white"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:hint="xxxxxx"
                android:gravity="center"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/newCodeText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/scc"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/resend"
                android:clickable="true"
                android:onClick="resendCode"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verifyButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/submit"
                android:background="#00000000"
                android:textColor="@color/white"
                android:fontFamily="@font/scc"
                android:textSize="24sp"
                android:layout_gravity="end"
                android:gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:onClick="verifySignup"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>